# quadruped

./: .gitignore  Dockerfile  docker-compose.yml
energy_logs/: joint_states_2025-02-01_17-53-13.csv  joint_states_2025-02-02_22-05-17.csv  joint_states_2025-02-03_16-31-28.csv  joint_states_2025-02-03_16-39-57.csv  joint_states_2025-02-03_16-40-54.csv  joint_states_2025-02-03_16-42-57.csv  joint_states_2025-02-03_17-39-52.csv  joint_states_2025-02-03_17-46-31.csv  joint_states_2025-02-03_17-49-26.csv  joint_states_2025-02-03_19-11-25.csv  joint_states_2025-02-05_19-58-26.csv  joint_states_2025-02-05_20-06-15.csv  joint_states_2025-02-05_20-28-12.csv  joint_states_2025-02-05_20-44-01.csv  joint_states_2025-02-05_20-45-02.csv  joint_states_2025-02-05_20-58-51.csv  joint_states_2025-02-05_21-07-41.csv  joint_states_2025-02-05_21-29-34.csv  joint_states_2025-02-05_21-30-26.csv  joint_states_2025-02-05_21-31-35.csv  joint_states_2025-02-05_21-39-13.csv
media/: energy-animation-2024-10-26.webm
media/energy-animations/: single-leg-energy-2024-10-30.webm  total-energy-animation-2024-10-30.webm
src/: anymal.sdf  anymal.urdf  unitree_a1.urdf
src/a1_description/: CMakeLists.txt  package.xml
src/energy_model/: cost_of_transport.py  double_pendulum.py  freq_analysis.py  napkin_calc.py  quadruped_energy.py  unit_test.py
src/energy_model/accuracy_check/: plotting.py  video_cap.py
src/energy_model/data_presentation/gait_animations/: gait_energy_animation_fourier_esimate.py  gait_energy_animation_legs.py  gait_energy_animation_single_leg.py  gait_energy_animation_total.py
src/energy_model/data_presentation/plot_data/: energy_vs_time.py  gait_based_plots.py  kinematics_plots.py
src/energy_model/gait_animations/: gait_energy_animation_fourier_esimate.py  gait_energy_animation_legs.py  gait_energy_animation_single_leg.py  gait_energy_animation_total.py
src/energy_model/kinematics_data/: angle_converter.py  data_post_process.py  data_to_csv.py  data_to_yaml.py  ground_velocity.py  kinematics_tracker.py
src/energy_model/kinematics_data/unitree_a1/: approx_leg_traj_data.csv  fix_point.csv  front_foot.csv  front_hip.csv  front_knee.csv  raw_leg_traj_data.csv  rear_foot.csv  rear_hip.csv  rear_knee.csv  test.csv
src/energy_model/model_validation/: grav_off_vs_grav_on.py  napkin_calc.py  pendulum_energy.py  pendulum_power.py  test.py
src/energy_model/old/: energy.py
src/energy_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/energy_pkg/energy_pkg/: analytical_gait_loader.py  desired_data_logger.py  energy_node.py  filter_torques.py  filtered_data_logger.py  gait_loader.py  gazebo_energy_node.py  log_gazebo_gait.py  python_energy_node.py  raw_data_logger.py  static_subscriber.py  tf_publisher.py
src/energy_pkg/gait_trajectory/: approx_gait_traj.csv  gait_sin_waves.yaml  raw_gait_traj.csv
src/energy_pkg/src/: energy_calc.cpp
src/gait_analysis/: CMakeLists.txt  package.xml
src/gait_analysis/include/gait_analysis/: cross_correlation_node.hpp
src/gait_analysis/src/: cross_correlation_node.cpp
src/gait_generation/: package.xml  setup.cfg  setup.py
src/gait_generation/gait_generation/: analytical_gait_loader.py  empirical_gait_loader.py  initial_conditions.py  pid_controller.py
src/gait_generation/gait_trajectory/: approx_gait_traj.csv  gait_sin_waves_test_case.yaml
src/gait_generation_cpp/: CMakeLists.txt  package.xml
src/gait_generation_cpp/include/gait_generation_cpp/: analytical_gait_loader.hh
src/gait_generation_cpp/src/: analytical_gait_loader.cpp
src/quadruped_bringup/: CMakeLists.txt  package.xml
src/quadruped_bringup/config/: model_debug.launch.rviz  ros_gz_bridge_config.yaml  rviz_sim.launch.rviz
src/quadruped_bringup/launch/: debug_gait.launch.py  debug_gait_cpp.launch.py  debug_gz_energy.launch.py  debug_init_conds.launch.py  gait_debug.launch.py  model_debug.launch.py  quadruped_sim.launch.py  rviz_sim.launch.py
src/quadruped_description/: CMakeLists.txt  package.xml
src/quadruped_description/config/: params.yaml  quadruped_controllers.yaml
src/quadruped_description/models/quadruped/: model.config  model.sdf
src/quadruped_description/xacro/: const.xacro  leg.xacro  model.xacro  params.xacro  quad_plugins.xacro  quadruped.xacro  world_constraints.xacro
src/quadruped_gazebo/: CMakeLists.txt  package.xml
src/quadruped_gazebo/include/quadruped_gazebo/: JointPositionControllerTorquePublisher.hh  PlanarConstraint.hh
src/quadruped_gazebo/models/: quadruped_world.sdf
src/quadruped_gazebo/src/: BasicSystem.cc  FullSystem.cc  JointPositionControllerTorquePublisher.cc  PlanarConstraint.cc
src/quadruped_sim/: CMakeLists.txt  package.xml
src/quadruped_sim/config/: controller_config.yaml
src/quadruped_sim/launch/: quad_sim_launch.py
src/quadruped_sim/models/: ground.sdf  quadruped_world.sdf  sun.sdf
src/quadruped_sim/src/: my_node.cpp
src/robot_descriptions/a1_description/: CMakeLists.txt
src/robot_descriptions/a1_description/urdf/: a1.urdf
src/robot_descriptions/a1_description/xacro/: transmission.xacro
src/robot_descriptions/generic_quadruped_description/: CMakeLists.txt  package.xml
src/robot_descriptions/generic_quadruped_description/model/: quadruped.urdf
src/robot_descriptions/generic_quadruped_description/xacro/: const.xacro  leg.xacro  params.xacro  quadruped.xacro
src/simulation/: parameter_comparison.py  parameters.py  simulation_looper.py  test.py  test_params.yaml
src/simulation/post_processing/: csv_data_processer.py  freq_analysis.py  gazebo_energy.py  low_pass_filter.py  model_comparison.py  power_analysis.py  power_plots.py  python_energy.py  synthetic_energy.py
src/torque_test/: CMakeLists.txt  package.xml
src/torque_test/config/: bridge_config.yaml
src/torque_test/hooks/: torque_test.sh.in
src/torque_test/launch/: pendulum.launch.py
src/torque_test/models/: pendulum.sdf
src/torque_test/src/: JointPositionControllerTorquePublisher.cc  JointPositionControllerTorquePublisherTorqueTest.cc  JointTorquePublisher.cc
vscode_config/: c_cpp_properties.json
(+236 files in other folders)
