<?xml version="1.0"?>
<package format="3">
    <name>a1_description</name>
    <version>0.0.0</version>
    <description>Unitree A1 description package for ROS2</description>

    <maintainer email="nathan.wolfsonkin@cooper.edu">Nathan Wolf-Sonkin</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>xacro</depend>
    
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
  
    <export>
      <build_type>ament_cmake</build_type>
    </export>

</package>
