<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>generic_quadruped_description</name>
  <version>0.0.0</version>
  <description>Parameterized Quadrupedal Model Description Package</description>
  <maintainer email="nathan.wolfsonkin@cooper.edu">Nathan Wolf-Sonkin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>xacro</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
